se agregó add react-stripe hook-form

--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/system": "^5.0.0-beta.5",
     "@mui/system": "^5.0.1",
+    "@stripe/react-stripe-js": "^1.5.0",
+    "@stripe/stripe-js": "^1.18.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "accounting": "^0.4.1",
+    "add": "^2.0.6",
     "firebase": "^9.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.16.1",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
