--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "@testing-library/user-event": "^12.1.10",
     "accounting": "^0.4.1",
     "add": "^2.0.6",
+    "axios": "^0.21.4",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "firebase": "^9.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.16.1",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "stripe": "^8.176.0",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1"
   },
